--- a/client/partials/chat.html
+++ b/client/partials/chat.html
@@ -10,7 +10,8 @@
     </div>
     <div class="send-bar">
         <input type="text" class="form-control user-name" id="userName" placeholder="User Name" ng-model="username">
-        <input type="text" class="form-control message" id="message" placeholder="Message" ng-model="message" ng-enter="sendMessage(username, message)">
+        <input type="text" class="form-control message" id="message" placeholder="Message" ng-model="message"
+               ng-enter="sendMessage(username, message)">
         <button type="submit" class="btn btn-primary" ng-click="sendMessage(username, message)">Send</button>
     </div>
 </div>
